# auditgraph

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MCP_GUIDE.md  Makefile  QUICKSTART.md  README.md  SPEC.md  architecture.html  codex.patch  example_research.md  pyproject.toml  requirements-dev.txt
.github/agents/: copilot-instructions.md  speckit.tasks.agent.md
.github/prompts/: socratesone.clean.prompt.md  socratesone.quality.prompt.md  socratesone.refactor.prompt.md  socratesone.security.prompt.md  socratesone.testing.prompt.md
.specify/memory/: constitution.md
auditgraph/: cli.py  config.py  errors.py  logging.py  scaffold.py
auditgraph/export/: __init__.py  dot.py  graphml.py  json.py
auditgraph/extract/: __init__.py  adr.py  code_symbols.py  content.py  document_types.py  docx_backend.py  entities.py  logs.py  manifest.py  markdown.py  ner.py  ner_backend.py  pdf_backend.py
auditgraph/git/: config.py  materializer.py  reader.py  selector.py
auditgraph/index/: __init__.py  adjacency_builder.py  bm25.py  decisions.py  semantic.py  type_index.py
auditgraph/ingest/: __init__.py  frontmatter.py  importer.py  manifest.py  parsers.py  policy.py  scanner.py  sources.py
auditgraph/jobs/: __init__.py  config.py  reports.py  runner.py
auditgraph/link/: __init__.py  adjacency.py  links.py  rules.py
auditgraph/llm/: __init__.py  interface.py
auditgraph/neo4j/: __init__.py  connection.py  cypher_builder.py  export.py  records.py  sync.py
auditgraph/normalize/: paths.py  text.py
auditgraph/pipeline/: postcondition.py  runner.py  warnings.py
auditgraph/plugins/: __init__.py  registry.py  schema.py
auditgraph/query/: __init__.py  _shard_scanner.py  diff.py  filters.py  git_history.py  git_introduced.py  git_log.py  git_who.py  keyword.py  list_entities.py  neighbors.py  node_view.py  ranking.py  validate_store.py  why_connected.py
auditgraph/storage/: __init__.py  artifacts.py  audit.py  config_snapshot.py  hashing.py  knowledge_models.py  knowledge_types.py  loaders.py  manifests.py  migration.py  ontology.py  provenance.py  safe_artifacts.py  sharding.py
auditgraph/utils/: budget.py  chunking.py  compatibility.py  document_text.py  export_metadata.py  mcp_errors.py  mcp_inventory.py  mcp_manifest.py  paths.py  profile.py  quality_gates.py  redaction.py  rule_packs.py  sort.py
config/: jobs.yaml  pkg.yaml
config/extractors/: core.yaml
config/link_rules/: core.yaml
docs/: clarifying-answers.md  environment-setup.md
docs/integration/: mcp_guide.md  neo4j.md
docs/plugins/: extractor_example.md
docs/spec/: 00-overview.md  01-product-scope-users.md  016-mcp-tools-llm-integration.md  02-data-sources-ingestion.md  (+14 more)
llm-tooling/: README.md  generate_adapters.py  generate_skill_doc.py  skill.md  tool.manifest.json
llm_tooling/: __init__.py
reports/: Orpheus.md
scripts/: setup-ner.sh
tests/: support.py  test_behavioral.py  test_cli_integration.py  test_cli_resolution.py  test_code_chunking_opt_in.py  test_deterministic_timestamp.py  test_diff_runs.py  test_duration_tracking.py  test_failure_modes.py  test_failure_paths.py  test_git_determinism.py  test_git_edge_cases.py  test_git_fixtures.py  test_git_hashing.py  test_git_hashing_setup.py  test_git_materializer.py  test_git_mcp.py  test_git_provenance_file_entities.py  test_git_provenance_name_field.py  test_git_provenance_stage.py  test_git_queries.py  test_git_reader.py  test_git_selector.py  test_llm_interface.py  test_mcp_utils.py  test_migration.py  test_neo4j_connection.py  test_neo4j_cypher_builder.py  test_neo4j_export.py  test_neo4j_records.py  test_neo4j_sync.py  test_ner.py  test_ner_extension_filter.py  test_ner_link_integration.py  test_ner_markdown_noise_stripping.py  test_ner_post_extraction_filter.py  test_pipeline_performance.py  test_redaction_detectors.py  test_replay_log_append.py  test_reproducibility.py  (+81 more)
(+262 files in other folders)
